--- a/quiz/package.json
+++ b/quiz/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "mammoth": "^1.10.0",
-    "pdfjs-dist": "3.11.174",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
