--- a/quiz/package.json
+++ b/quiz/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "mammoth": "^1.10.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+        "pdfjs-dist": "^4.0.379"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/pdfjs-dist": "^2.10.377",
+    "@types/pdfjs-dist": "^4.0.379",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -24,7 +26,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^4.0.379",
     "vite": "^7.1.2"
+  },
+    "resolutions": {
+    "pdfjs-dist": "4.0.379"
   }
 }
