--- a/quiz/package.json
+++ b/quiz/package.json
@@ -10,15 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/pdfjs-dist": "^2.10.377",
     "mammoth": "^1.10.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-        "pdfjs-dist": "^4.0.379"
-
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/pdfjs-dist": "^4.0.379",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -26,10 +25,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "pdfjs-dist": "^4.0.379",
     "vite": "^7.1.2"
   },
-    "resolutions": {
+  "resolutions": {
     "pdfjs-dist": "4.0.379"
   }
 }
