--- a/quiz/package.json
+++ b/quiz/package.json
@@ -13,6 +13,7 @@
     "@types/pdfjs-dist": "^2.10.377",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "mammoth": "^1.10.0",
     "pdfjs-dist": "^5.4.149",
     "react": "^19.1.1",
