--- a/quiz/package.json
+++ b/quiz/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prebuild": "node scripts/check-case-sensitivity.js"
+"prebuild": "node scripts/check-case-sensitivity.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
