--- a/quiz/package.json
+++ b/quiz/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-"prebuild": "node scripts/check-case-sensitivity.cjs"
+    "prebuild": "node scripts/check-case-sensitivity.cjs || true"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,11 +18,11 @@
     "@mui/system": "^7.3.2",
     "@mui/x-charts": "^8.11.1",
     "@types/pdfjs-dist": "^2.10.377",
-    "firebase": "^12.2.1",
+    "firebase": "^10.14.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "mammoth": "^1.10.0",
-    "pdfjs-dist": "^5.4.149",
+    "pdfjs-dist": "^4.0.379",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
@@ -37,8 +37,5 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  },
-  "resolutions": {
-    "pdfjs-dist": "4.0.379"
   }
 }
