--- a/quiz/vercel.json
+++ b/quiz/vercel.json
@@ -1,11 +1,29 @@
 {
-  "buildCommand": "CI=false npm run build",
+  "buildCommand": "npm ci --legacy-peer-deps && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "installCommand": "npm ci --legacy-peer-deps",
+  "nodeVersion": "18.x",
+  "env": {
+    "CI": "false",
+    "NODE_ENV": "production",
+    "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
+  },
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
