--- a/quiz/package.json
+++ b/quiz/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "4.3.4",
   "type": "module",
+  "engines": {
+  "node": "18.x"
+}
+,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -38,4 +42,5 @@
     "globals": "^16.3.0",
     "vite": "^7.1.2"
   }
+  
 }
