--- a/quiz/.gitignore
+++ b/quiz/.gitignore
@@ -1,3 +1,9 @@
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
 # Logs
 logs
 *.log
@@ -22,6 +28,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-# Case sensitivity
-[Ss]tyles/
