--- a/quiz/package.json
+++ b/quiz/package.json
@@ -23,6 +23,7 @@
     "@types/pdfjs-dist": "^2.10.377",
     "firebase": "^10.14.1",
     "framer-motion": "^12.23.12",
+    "lucide": "^0.544.0",
     "lucide-react": "^0.543.0",
     "mammoth": "^1.10.0",
     "pdfjs-dist": "^4.0.379",
