--- a/quiz/package.json
+++ b/quiz/package.json
@@ -21,6 +21,7 @@
     "@mui/system": "^7.3.2",
     "@mui/x-charts": "^8.11.1",
     "@types/pdfjs-dist": "^2.10.377",
+    "docx": "^9.5.1",
     "firebase": "^10.14.1",
     "framer-motion": "^12.23.12",
     "lucide": "^0.544.0",
