--- a/quiz/package.json
+++ b/quiz/package.json
@@ -27,6 +27,7 @@
     "lucide": "^0.544.0",
     "lucide-react": "^0.543.0",
     "mammoth": "^1.10.0",
+    "nanoid": "^5.1.5",
     "pdfjs-dist": "^4.0.379",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
