--- a/quiz/package.json
+++ b/quiz/package.json
@@ -32,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2",
-    "recharts": "^3.2.0"
+    "recharts": "^3.2.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
